--- a/src/containers/pages/Dashboard/Dashboard.scss
+++ b/src/containers/pages/Dashboard/Dashboard.scss
@@ -122,5 +122,13 @@
     }
     .keluar-note{
         cursor: pointer;
+        background: yellow;
+        width: 60px;
+        height: 35px;
+        text-align: center;
+        border-radius: 12px;
+        .text-keluar{
+            padding-top: 5px;
+        }
     }
 }
